--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="last-container">
             <h2>Ready To Think More Clearly?</h2>
             <p>Join thousands of learners who are building their personal knowledge vault. Start free, no credit card required.</p>
-            <button class="btn">Get Early Access &rarr;</button>
+            <button class="btn">Get Early Access</button>
             <p class="last-para">Free during early access • No credit card needed</p>
         </div>
     </section>
